# app/src/routes/user.js
@@ -7,6 +7,29 @@ const ServerError = require('../errors/serverError')
 
 const router = express.Router();
 
+router.get('/:id', async function(req, res) {
+    try {
+        const uid = await verifyIdToken(req.cookies.firebaseAuth)
+        
+        const response = await userService.getUserById(req.params.id)
+        res.status(200).send(response)
+    } catch (e) {
+        const body = {
+            error: e.name,
+            message: e.message
+        }
+        if (e instanceof ConnectionError) {
+            res.status(500).send(body)
+        } else if (e instanceof AuthError) {
+            res.status(401).send(body)
+        } else if (e instanceof ServerError) {
+            res.status(e.status).send(body)
+        } else {
+            res.status(500).send(body)
+        }
+    }
+});
+
 router.get('/:email', async function(req, res) {
     try {
         const uid = await verifyIdToken(req.cookies.firebaseAuth)
