# app/swagger.json
@@ -200,6 +200,42 @@
     },
     "/user": {
       "post": {
+        "parameters": [
+          {
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "type": "string"
+                },
+                "first_name": {
+                  "type": "string"
+                },
+                "last_name": {
+                  "type": "string"
+                },
+                "role": {
+                  "type": "string"
+                },
+                "birth_date": {
+                  "type": "string",
+                  "format": "date"
+                },
+                "phone_type": {
+                  "type": "string"
+                },
+                "phone_number": {
+                  "type": "string"
+                },
+                "email": {
+                  "type": "string",
+                  "format": "email"
+                }
+              }
+            }
+          }
+        ],
         "tags": [
           "Users"
         ],
@@ -215,12 +251,76 @@
             "description": "Server error"
           }
         }
-      },
-      "patch": {
+      }
+    },
+    "/user/{user_id}": {
+      "parameters": [
+        {
+          "in": "path",
+          "name": "id",
+          "type": "string",
+          "required": true,
+          "description": "ID of the user"
+        }
+      ],
+      "get": {
         "tags": [
           "Users"
         ],
-        "summary": "Modify user's content by email",
+        "summary": "Get user by id",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Authorization error"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      },
+      "patch": {
+        "parameters": [
+          {
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "type": "string"
+                },
+                "first_name": {
+                  "type": "string"
+                },
+                "last_name": {
+                  "type": "string"
+                },
+                "role": {
+                  "type": "string"
+                },
+                "birth_date": {
+                  "type": "string",
+                  "format": "date"
+                },
+                "phone_type": {
+                  "type": "string"
+                },
+                "phone_number": {
+                  "type": "string"
+                },
+                "email": {
+                  "type": "string",
+                  "format": "email"
+                }
+              }
+            }
+          }
+        ],
+        "tags": [
+          "Users"
+        ],
+        "summary": "Modify user's content by id",
         "responses": {
           "202": {
             "description": "User inormation updated correctly"
@@ -234,7 +334,7 @@
         }
       }
     },
-    "/users/{email}": {
+    "/user/{email}": {
       "parameters": [
         {
           "in": "path",
